--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,7 +4,9 @@ ext {
             lombok    : "1.18.30",
             mapStruct : "1.5.5.Final",
             swagger   : "1.6.15",
-            postgres  : "42.3.8"
+            postgres  : "42.3.8",
+            jwt       : "4.4.0",
+            springCloud: "3.1.8",
     ]
 
     libs = [
@@ -15,6 +17,8 @@ ext {
             mapStruct           : "org.mapstruct:mapstruct:$versions.mapStruct",
             mapStructProcessor  : "org.mapstruct:mapstruct-processor:$versions.mapStruct",
             swagger             : "org.springdoc:springdoc-openapi-ui:$versions.swagger",
-            postgres            : "org.postgresql:postgresql:$versions.postgres"
+            postgres            : "org.postgresql:postgresql:$versions.postgres",
+            javaJwt             : "com.auth0:java-jwt:$versions.jwt",
+            springCloudOpenFeign: "org.springframework.cloud:spring-cloud-starter-openfeign:$versions.springCloud",
     ]
 }
