--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'SocialMediaProject'
 include 'auth-service'
 include 'user-service'
+include 'config-server'
+include 'git-config-server'
 
