--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,5 +20,9 @@ ext {
             postgres            : "org.postgresql:postgresql:$versions.postgres",
             javaJwt             : "com.auth0:java-jwt:$versions.jwt",
             springCloudOpenFeign: "org.springframework.cloud:spring-cloud-starter-openfeign:$versions.springCloud",
+
+            springCloudConfigStarter: "org.springframework.cloud:spring-cloud-starter-config:$versions.springCloud",
+            springCloudConfigClient: "org.springframework.cloud:spring-cloud-config-client:$versions.springCloud",
+            springCloudConfigServer: "org.springframework.cloud:spring-cloud-config-server:$versions.springCloud",
     ]
 }
