--- a/config-server/src/main/resources/config-repo/auth-service-application.yml
+++ b/config-server/src/main/resources/config-repo/auth-service-application.yml
@@ -2,6 +2,12 @@ server:
   port: 9090
 
 spring:
+  zipkin:
+    enabled: true
+    base-url: http://localhost:9411
+    service:
+      name: auth-service
+
   datasource:
     driver-class-name: org.postgresql.Driver
     username: postgres
