--- a/config-server/src/main/resources/config-repo/post-service-application.yml
+++ b/config-server/src/main/resources/config-repo/post-service-application.yml
@@ -1,24 +1,24 @@
 server:
-  port: 9091
+  port: 9092
 
 spring:
   zipkin:
     enabled: true
     base-url: http://localhost:9411
     service:
-      name: user-service
+      name: post-service
 
   datasource:
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: 123456
-    url: jdbc:postgresql://localhost:5432/UserDb
+    url: jdbc:postgresql://localhost:5432/PostDb
 
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
 
-jwt:
-  secretKey: ${java12secret}
-  issuer: ${java12issuer}
+#jwt:
+  #secretKey: ${java12secret}
+  #issuer: ${java12issuer}
