--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,6 +7,8 @@ ext {
             postgres  : "42.3.8",
             jwt       : "4.4.0",
             springCloud: "3.1.8",
+            circuirBreaker: "2.1.7",
+
     ]
 
     libs = [
@@ -24,5 +26,15 @@ ext {
             springCloudConfigStarter: "org.springframework.cloud:spring-cloud-starter-config:$versions.springCloud",
             springCloudConfigClient: "org.springframework.cloud:spring-cloud-config-client:$versions.springCloud",
             springCloudConfigServer: "org.springframework.cloud:spring-cloud-config-server:$versions.springCloud",
+
+            springCloudStarterGateway: "org.springframework.cloud:spring-cloud-starter-gateway:$versions.springCloud",
+            springCloudCircuitBreaker: "org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:$versions.circuirBreaker",
+            springCloudCircuitReactor: "org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j:$versions.circuirBreaker",
+
+            springCloudSleuth: "org.springframework.cloud:spring-cloud-starter-sleuth:$versions.springCloud",
+            springCloudZipkin: "org.springframework.cloud:spring-cloud-sleuth-zipkin:$versions.springCloud",
+
+
+
     ]
 }
