--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,6 @@ include 'auth-service'
 include 'user-service'
 include 'config-server'
 include 'git-config-server'
+include 'api-gateway-service'
+include 'post-service'
 
