--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ allprojects {
         implementation libs.springCloudZipkin
         implementation libs.springCloudSleuth
 
+        implementation libs.springBootRabbitMq
+
     }
 }
 
