--- a/config-server/src/main/resources/config-repo/auth-service-application.yml
+++ b/config-server/src/main/resources/config-repo/auth-service-application.yml
@@ -2,6 +2,12 @@ server:
   port: 9090
 
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: user
+    password: password
+
   zipkin:
     enabled: true
     base-url: http://localhost:9411
@@ -22,3 +28,12 @@ spring:
 jwt:
   secretKey: ${java12secret}
   issuer: ${java12issuer}
+
+rabbitmq:
+  auth-exchange: authExchange
+  register-queue: registerQueue
+  register-bindingKey: registerBindingKey
+
+  active-status-queue: activeStatusQueue
+  active-status-bindingKey: activeStatusBindingKey
+
