--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,24 +15,28 @@ ext {
             springBootWeb       : "org.springframework.boot:spring-boot-starter-web:$versions.springBoot",
             springBootJpa       : "org.springframework.boot:spring-boot-starter-data-jpa:$versions.springBoot",
             springBootValidation: "org.springframework.boot:spring-boot-starter-validation:$versions.springBoot",
+
+            springBootRabbitMq       : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
+
             lombok              : "org.projectlombok:lombok:$versions.lombok",
             mapStruct           : "org.mapstruct:mapstruct:$versions.mapStruct",
             mapStructProcessor  : "org.mapstruct:mapstruct-processor:$versions.mapStruct",
             swagger             : "org.springdoc:springdoc-openapi-ui:$versions.swagger",
             postgres            : "org.postgresql:postgresql:$versions.postgres",
             javaJwt             : "com.auth0:java-jwt:$versions.jwt",
-            springCloudOpenFeign: "org.springframework.cloud:spring-cloud-starter-openfeign:$versions.springCloud",
 
+            springCloudOpenFeign: "org.springframework.cloud:spring-cloud-starter-openfeign:$versions.springCloud",
             springCloudConfigStarter: "org.springframework.cloud:spring-cloud-starter-config:$versions.springCloud",
             springCloudConfigClient: "org.springframework.cloud:spring-cloud-config-client:$versions.springCloud",
             springCloudConfigServer: "org.springframework.cloud:spring-cloud-config-server:$versions.springCloud",
-
+            springCloudSleuth: "org.springframework.cloud:spring-cloud-starter-sleuth:$versions.springCloud",
+            springCloudZipkin: "org.springframework.cloud:spring-cloud-sleuth-zipkin:$versions.springCloud",
             springCloudStarterGateway: "org.springframework.cloud:spring-cloud-starter-gateway:$versions.springCloud",
+
             springCloudCircuitBreaker: "org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:$versions.circuirBreaker",
             springCloudCircuitReactor: "org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j:$versions.circuirBreaker",
 
-            springCloudSleuth: "org.springframework.cloud:spring-cloud-starter-sleuth:$versions.springCloud",
-            springCloudZipkin: "org.springframework.cloud:spring-cloud-sleuth-zipkin:$versions.springCloud",
+
 
 
 
