--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'config-server'
 include 'git-config-server'
 include 'api-gateway-service'
 include 'post-service'
+include 'mail-service'
 
