--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,6 +39,7 @@ ext {
             springBootMailSender: "org.springframework.boot:spring-boot-starter-mail:$versions.springBoot",
 
             springBootDataRedis: "org.springframework.boot:spring-boot-starter-data-redis:$versions.springBoot",
+            springBootElasticSearch: "org.springframework.boot:spring-boot-starter-data-elasticsearch:$versions.springBoot",
 
 
     ]
