--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include 'git-config-server'
 include 'api-gateway-service'
 include 'post-service'
 include 'mail-service'
+include 'elastic-service'
 
