--- a/config-server/src/main/resources/config-repo/user-service-application.yml
+++ b/config-server/src/main/resources/config-repo/user-service-application.yml
@@ -5,6 +5,13 @@ spring:
   cache:
     type: redis
   data:
+    mongodb:
+      host: localhost
+      port: 27020
+      username: java12user
+      password: root
+      database: userDb
+
     redis:
       host: localhost
       port: 6379
@@ -19,16 +26,6 @@ spring:
     service:
       name: user-service
 
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    username: postgres
-    password: 123456
-    url: jdbc:postgresql://localhost:5432/UserDb
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
 
 jwt:
   secretKey: ${java12secret}
