--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -6,6 +6,5 @@ buildscript {
 
 
 dependencies {
-    implementation libs.postgres
-    implementation libs.springBootJpa
+    implementation libs.springBootDataMongo
 }
