--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -8,4 +8,5 @@ buildscript {
 dependencies {
     implementation libs.postgres
     implementation libs.springBootJpa
+    implementation libs.springBootSecurity
 }
