--- a/config-server/src/main/resources/config-repo/auth-service-application.yml
+++ b/config-server/src/main/resources/config-repo/auth-service-application.yml
@@ -2,6 +2,11 @@ server:
   port: 9090
 
 spring:
+  security:
+    user:
+      name: mehmet
+      password: 123
+
   cache:
     type: redis
   data:
